--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
   text-align: center;
-  background-color: #e0ffef;
 }
 
 header {
@@ -26,13 +26,13 @@ button {
 
 .card {
   display: inline-block;
-  border: 1px solid #ccc;
-  padding: 10px;
-  margin: 10px;
-  width: 200px;
   background-color: white;
+  border: 1px solid #ccc;
+  margin: 10px;
+  padding: 10px;
+  width: 200px;
 }
 
-img {
+.card img {
   width: 100%;
 }
